<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/login_title"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        android:text="@string/registration_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0"
                android:textColor="#000"
                android:text="@string/first_name"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/first_name"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0"
                android:textColor="#000"
                android:text="@string/last_name"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/last_name"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0"
                android:textColor="#000"
                android:text="@string/father_name"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/father_name"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0"
                android:textColor="#000"
                android:text="@string/birth_date"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/date_text"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:theme="@style/PrimaryFlatButton"
                android:id="@+id/date_button"
                android:layout_weight="0"
                android:text="@string/date_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:layout_weight="1"
                android:textColor="#000"
                android:text="@string/gender_text"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/gender_spinner"
                android:textSize="18sp"
                android:layout_weight="0"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_margin="12dp"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:theme="@style/PrimaryFlatButton"
        android:id="@+id/skip_button"
        android:layout_margin="12dp"
        android:layout_gravity="start|bottom"
        android:text="@string/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:theme="@style/PrimaryButton"
        android:id="@+id/finish_button"
        android:layout_margin="12dp"
        android:layout_gravity="end|bottom"
        android:text="@string/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</FrameLayout>
