<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:id="@+id/email_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email_input_layout"
        android:layout_gravity="center"
        android:id="@+id/password_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:text="@string/register_button"
        android:layout_below="@id/password_input_layout"
        android:layout_alignStart="@id/password_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MaterialButton"
        android:theme="@style/PrimaryFlatButton"/>

    <Button
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in_button"
        android:layout_below="@id/password_input_layout"
        android:layout_alignEnd="@id/password_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MaterialButton"
        android:theme="@style/PrimaryButton"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/sign_in_label"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_above="@id/email_input_layout"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_above="@id/sign_in_label"
        android:src="@drawable/ic_person_sign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo" />

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:cardCornerRadius="24dp">
        <TextView
            android:textSize="22sp"
            android:textColor="#fff"
            android:text="Social networks"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>

</RelativeLayout>