<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input_layout"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:inputType="textEmailAddress"
            android:hint="@string/password_hint"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_repeat_input_layout"
        android:layout_below="@id/password_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password_repeat"
            android:inputType="textEmailAddress"
            android:hint="@string/password_repeat_hint"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_above="@id/password_input_layout"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="gone"
        android:layout_margin="12dp"
        android:layout_gravity="center|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_alignStart="@id/password_repeat_input_layout"
        android:layout_below="@id/password_repeat_input_layout"
        android:theme="@style/PrimaryFlatButton"
        style="@style/MaterialButton"
        android:id="@+id/back_button"
        android:text="@string/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_alignEnd="@id/password_repeat_input_layout"
        android:layout_below="@id/password_repeat_input_layout"
        android:theme="@style/PrimaryButton"
        style="@style/MaterialButton"
        android:id="@+id/continue_button"
        android:text="@string/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/registration_title"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textColor="#673AB7"
        android:layout_above="@id/email_input_layout"
        android:text="Hello new user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/ic_user_add"
        android:layout_above="@id/registration_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:cardCornerRadius="24dp">
        <TextView
            android:textSize="22sp"
            android:textColor="#fff"
            android:text="Social networks"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>

</RelativeLayout>
